# tarur

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tarur_tutorial.ipynb
docs/: _config.yml  api.html  build.py  build_results.py  extract_outputs.py  guide.html  index.html  results.html
docs/assets/css/: style.css
docs/parts/: guide_estar.py  guide_hero.py  guide_rest.py  guide_smooth.py  guide_tar.py  nb_outputs_html.py  shared.py
tarur/: __init__.py  _version.py  core.py  critical_values.py  lag_selection.py  tables.py  visualization.py
tarur/cointegration/: __init__.py  tests.py
tarur/diagnostics/: __init__.py
tarur/linearity/: __init__.py  tests.py
tarur/models/: __init__.py
tarur/unit_root/: __init__.py  cook_vougas.py  cuestas_garratt.py  cuestas_ordonez.py  enders_granger.py  harvey_mills.py  hu_chen.py  kilic.py  kruse.py  kss.py  lnv.py  pascalau.py  sollis2004.py  sollis2009.py  vougas.py
