[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarur"
dynamic = ["version"]
description = "Nonlinear Unit Root Testing Library — 17+ tests with embedded critical values, automatic decisions, and publication-quality output"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Merwan Roudane", email = "merwanroudane920@gmail.com"},
]
keywords = [
    "unit-root", "nonlinear", "ESTAR", "STAR", "time-series",
    "econometrics", "cointegration", "stationarity", "TAR", "MTAR",
    "smooth-transition", "hypothesis-testing",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/merwanroudane/tarur"
Repository = "https://github.com/merwanroudane/tarur"
Issues = "https://github.com/merwanroudane/tarur/issues"

[tool.setuptools.dynamic]
version = {attr = "tarur._version.__version__"}

[tool.setuptools.packages.find]
include = ["tarur*"]
